--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
-    "@angular/material": "^8.0.2",
+    "@angular/material": "^8.1.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ckeditor/ckeditor5-angular": "^1.1.0",
     "@ckeditor/ckeditor5-build-classic": "^12.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.0.0",
+    "@ngmodule/material-carousel": "^0.4.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
